--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <img src="burger.png" alt="burger" id="burger" class="d-none">
 <img src="cookies.png" alt="cookies" id="cookies" class="d-none">
 <img src="waste.png" alt="waste" id="waste" class="d-none">
+<h2 id="highscore">High Score : 0</h2>
 <canvas id="canvas"></canvas>
 <script src="script.js"></script>
 </body>
